# grace

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
lib/case/: Cargo.toml
src/: lib.rs  main.rs
src/arguments/: formats_to_recase.rs  into.rs  mod.rs  sanitize.rs
src/case/: string.rs
src/commands/: mod.rs
src/commands/recase/: file.rs  files.rs  mod.rs  string.rs
src/commands/sanitize/: string.rs
src/core/: mod.rs
src/core/case/: mod.rs  string.rs
src/core/file/: file.rs
src/file/: file.rs
src/recaser/: recase.rs
tests/: tests.rs
tests/arguments/: formats_to_recase.rs  into.rs  mod.rs  sanitize.rs
tests/core/: mod.rs
tests/core/case/: string.rs
tests/core/file/: file.rs
