[package]
name = "grace"
version = "0.1.0"
authors = ["Maxim Petrenko <meinbaumm@gmail.com>"]
edition = "2021"
description = "CLI tool for processing files and strings."
readme = "README.md"
repository = "https://github.com/meinbaumm/grace.git"
license = "MIT"
keywords = ["cli", "files-manipulation", "strings-processing"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
recase = "0.3.0"
regex = "1.9"
serial_test = "2.0"
colored = "2"
